# TihanFly_GCS

./: .gitignore  .hintrc  MainWindow.html  Untitled-1.xml  all_test_cases_documentation.xlsx  all_test_specifications.xlsx  app.js  backend_module_function_description_for_unit_testing.xlsx  backend_test_cases_documentation.xlsx  backend_test_specifications.xlsx  build_clean.ps1  build_clean.sh  calib-accel.css  calib-accel.js  calib-compass.js  calib-level.js  calib-radio.css  calib-radio.js  camera-controls.css  camera-controls.js  comm-link.css  comm-link.js  command-editor.html  data-persistence.js  dropdown-menu.css  dropdown-menu.js  excel_summary.txt  failsafe.js  flight-controls.css  flight-controls.js  flight-hud.css  flight-hud.js  flight-mode.js  flight-modes.css  frame-type.js  frontend_module_function_descrption_for_unit_testing.xlsx  generate_backend_test_descriptions.py  generate_frontend_test_descriptions.py  generate_test_descriptions.py  geofence.js  (+40 more)
.scannerwork/: report-task.txt
Testing_and_Coverage/: backend_tests_metadata.json  build_log.txt  evidence_report.html  generate_evidence_report.py  run_coverage.sh  run_tests_and_report.py  test_cases_SOP_report.html
Testing_and_Coverage/Backend_Tests/: CMakeLists.txt  test_mavlink_inspector.cpp  test_mavlink_parser.cpp  test_serial.cpp  test_udp.cpp  test_vehicle.cpp
Testing_and_Coverage/Backend_Tests/Command/: test_command_manager.cpp
Testing_and_Coverage/Backend_Tests/Firmware/: test_firmware.cpp
Testing_and_Coverage/Backend_Tests/Flightmode/: test_flight_mode.cpp
Testing_and_Coverage/Backend_Tests/Inspector/: test_mavlink_inspector.cpp
Testing_and_Coverage/Backend_Tests/Link/: mock_transport.h  test_link.cpp  test_link_manager.cpp
Testing_and_Coverage/Backend_Tests/Parameters/: test_parameter_manager.cpp  test_switch_manager.cpp
Testing_and_Coverage/Backend_Tests/Parser/: test_mavlink_parser.cpp
Testing_and_Coverage/Backend_Tests/Transport/: test_serial.cpp  test_udp.cpp
Testing_and_Coverage/Backend_Tests/Vehicle/: test_vehicle.cpp
Testing_and_Coverage/Backend_Tests/calibration/: test_accel_calibration.cpp  test_compass_calibration.cpp  test_esc_calibration.cpp  test_radio_calibration.cpp
Testing_and_Coverage/Backend_Tests/camera/: test_camera_capture.cpp  test_mjpeg_server.cpp
Testing_and_Coverage/Backend_Tests/udp/: test_serial.cpp  test_udp.cpp
TihanFlyCC-main/: CMakeLists.txt  README.md  main.cpp  websocket_server.cpp  websocket_server.hpp
TihanFlyCC-main/Camera/: CMakeLists.txt  camera_capture.cpp  camera_capture.h  mjpeg_server.cpp  mjpeg_server.h
TihanFlyCC-main/Command/: CMakeLists.txt  command_manager.cpp  command_manager.h
TihanFlyCC-main/Firmware/: firmware_manager.cpp  firmware_manager.h  firmware_uploader.cpp  firmware_uploader.h
TihanFlyCC-main/Firmware/drone-firmware/: Kala_CO.apj  Palyanka_CO.apj  Palyanka_COP.apj  Shadow_CO.apj  Shadow_COP.apj  Spider_COP.apj  arducopter.apj
TihanFlyCC-main/Flightmode/: CMakeLists.txt  flight_mode.cpp  flight_mode.h
TihanFlyCC-main/Inspector/: CMakeLists.txt  mavlink_inspector.cpp  mavlink_inspector.h
TihanFlyCC-main/Link/: CMakeLists.txt  link.cpp  link.h  link_manager.cpp  link_manager.h
TihanFlyCC-main/Parameters/: parameter_file.h  parameter_manager.cpp  parameter_manager.h  parameter_ws_handler.h  switch_manager.cpp  switch_manager.h
TihanFlyCC-main/Parser/: CMakeLists.txt  mavlink_parser.cpp  mavlink_parser.h
TihanFlyCC-main/Testing/: CMakeLists.txt  test_link.cpp  test_serial.cpp  test_udp.cpp
TihanFlyCC-main/Transport/: CMakeLists.txt  serial.cpp  serial.h  transport.h  udp.cpp  udp.h
TihanFlyCC-main/Vehicle/: CMakeLists.txt  vehicle.cpp  vehicle.h  vehicle_manager.cpp  vehicle_manager.h
TihanFlyCC-main/calibration/: CMakeLists.txt  accel_calibration.cpp  accel_calibration.h  compass_calibration.cpp  compass_calibration.h  esc_calibration.cpp  esc_calibration.h  radio_calibration.cpp  radio_calibration.h
TihanFlyCC-main/udp/: CMakeLists.txt  main.cpp
TihanFlyCC-main/udp/serial/: serial.cpp  serial.h
TihanFlyCC-main/udp/udp/: CMakeLists.txt  udp.cpp  udp.h
backend/: build.sh
css/: calib-compass.css  calib-esc.css  command-editor.css  dropdown-menu.css  failsafe.css  flight-controls.css  flight-modes.css  frame-type.css  geofence.css  message-console.css  motor-test.css  param-switch.css  pid-tuning.css  plan-flight.css  style.css  vehicle-config.css
dist_old/: builder-debug.yml  builder-effective-config.yaml
js/: analyze-tools.js  app.js  calib-accel.js  calib-esc.js  comm-link.js  command-editor.js  compass.js  component-loader.js  data-persistence.js  dropdown-menu.js  failsafe.js  (+20 more)
test_backend/: CMakeLists.txt  all_backend_test_cases_documentation.xlsx  generate_backend_test_cases_excel.py  print_coverage.py  test_detail.json
test_backend/Command/: test_command_manager.cpp
test_backend/Firmware/: test_firmware_manager.cpp  test_firmware_uploader.cpp
test_backend/Flightmode/: test_flight_mode.cpp
test_backend/Inspector/: test_mavlink_inspector.cpp
test_backend/Link/: mock_transport.h  test_link.cpp  test_link_manager.cpp
test_backend/Parameters/: test_parameter_manager.cpp  test_switch_manager.cpp
test_backend/Transport/: test_serial.cpp  test_udp.cpp
test_backend/Vehicle/: test_vehicle.cpp  test_vehicle_manager.cpp
test_backend/calibration/: test_accel_calibration.cpp  test_compass_calibration.cpp  test_esc_calibration.cpp  test_radio_calibration.cpp
test_backend/evidence/: UT-AC-001.txt  UT-AC-002.txt  UT-AC-003.txt  UT-AC-004.txt  UT-AC-005.txt  UT-AC-006.txt  UT-AC-007.txt  UT-AC-008.txt  UT-AC-009.txt  UT-AC-010.txt  UT-AC-011.txt  UT-AC-012.txt  UT-AC-013.txt  UT-AC-014.txt  UT-AC-015.txt  UT-AC-016.txt  UT-AC-017.txt  UT-AC-018.txt  UT-AC-019.txt  UT-AC-020.txt  UT-AC-021.txt  UT-AC-022.txt  UT-AC-023.txt  UT-AC-024.txt  UT-AC-025.txt  UT-AC-026.txt  UT-CC-001.txt  UT-CC-002.txt  UT-CC-003.txt  UT-CC-004.txt  UT-CC-005.txt  UT-CC-006.txt  UT-CC-007.txt  UT-CC-008.txt  UT-CC-009.txt  UT-CC-010.txt  UT-CC-011.txt  UT-CC-012.txt  UT-CC-013.txt  UT-CC-014.txt  (+238 more)
(+1829 files in other folders)
